# qltytest

./: README.md
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: Book2.xlsx  abstract.py  framework.py  neg_col.py  neg_row.py  sheet_sum.py  sum_eq_val.py  test.py
poetry-demo/poetry_demo/config/: simple.yaml
poetry-demo/tests/: test_neg_col.py
